65-real-time-monitoring-of-ongoing-operations

--- a/dashboard/src/assets/i18n/en.json
+++ b/dashboard/src/assets/i18n/en.json
@@ -2,7 +2,7 @@
     "DISPATCHER": {
         "INCIDENT_LIST": "Incident List",
         "SELECTED_INCIDENT": "Selected Incident",
-        "RESOURCES": "Ressourcs",
+        "RESOURCES": "Resources",
         "RESOURCE_STANDARD": "Standard",
         "RESOURCE_ADDITIONAL": "Additional",
         "SELECT": {
