Resolve "Create Incident Address Input potentially causes Inconsistencies"

--- a/dashboard/src/assets/i18n/de.json
+++ b/dashboard/src/assets/i18n/de.json
@@ -56,7 +56,7 @@
         "ADDRESS_SEARCH": "Adresse suchen",
         "SECTION_PERSONS": "Personen",
         "SECTION_QUESTIONNAIRE": "Fragen",
-        "SECTION_CLASSIFICATION": "Klassifikation", 
+        "SECTION_CLASSIFICATION": "Klassifikation",
         "RECOMMENDATION_MESSAGE": "Empfehlung des Klassifizierungssystems: ",
         "SELECTED_MESSAGE": "Ausgewählt:",
         "CATEGORY_ACTION": "Kategorie auswählen",
@@ -67,13 +67,16 @@
         "HURT_PERSONS": " verletzte Personen",
         "SUCCESS_INCIDENT_CREATION": "Einsatz erfolgreich erstellt!",
         "ERROR_INCIDENT_CREATION": "Es ist Fehler beim Erstellen des Einsatzes aufgetreten",
-        "POSTAL_CODE": "PLZ",
-        "STREET": "Straße",
+        "ADDRESS_INPUT_HEADING": "Adressinformation Verfeinern",
+        "ADDRESS_INPUT_TOOLTIP": "Bitte verwenden Sie das Eingabefeld der Karte links.",
+        "POSTAL_CODE": "PLZ (Karte verwenden)",
+        "POSTAL_CODE_PH": "1010",
+        "STREET": "Straße (Karte verwenden)",
         "STREET_PH": "Hauptstraße 1",
         "LOCATION_ADDITIONAL": "Zusätzliche Informationen",
         "LOCATION_ADDITIONAL_PH": "Nebengebäude, Stockwerk, etc.",
-        "CITY": "Wien, Österreich",
-        "CITY_PH": "Ort",
+        "CITY": "Ort (Karte verwenden)",
+        "CITY_PH": "Wien, Österreich",
         "CALLEE": "AnruferIn:",
         "CALLEE_NUMBER": "Nummer",
         "CALLEE_NAME": "Name",
