--- a/dashboard/src/assets/i18n/en.json
+++ b/dashboard/src/assets/i18n/en.json
@@ -65,13 +65,16 @@
         "HURT_PERSONS": " injured persons",
         "SUCCESS_INCIDENT_CREATION": "Incident created successfully!",
         "ERROR_INCIDENT_CREATION": "An error occurred while creating the incident",
-        "POSTAL_CODE": "Postal Code",
-        "STREET": "Street",
+        "ADDRESS_INPUT_HEADING": "Refine Address Information",
+        "ADDRESS_INPUT_TOOLTIP": "Please use the input field of the map on the left.",
+        "POSTAL_CODE": "Postal Code (use map)",
+        "POSTAL_CODE_PH": "1010",
+        "STREET": "Street (use map)",
         "STREET_PH": "Hauptstraße 1",
         "LOCATION_ADDITIONAL": "Additional Information",
         "LOCATION_ADDITIONAL_PH": "outbuilding, floor, etc.",
-        "CITY": "Vienna, Austria",
-        "CITY_PH": "City",
+        "CITY": "City (use map)",
+        "CITY_PH": "Vienna, Austria",
         "CALLEE": "Callee:",
         "CALLEE_NUMBER": "Number",
         "CALLEE_NAME": "Name",
