--- a/dashboard/src/assets/i18n/en.json
+++ b/dashboard/src/assets/i18n/en.json
@@ -116,6 +116,7 @@
         "CANCEL": "No"
     },
     "LOGIN": "Please log in to continue",
+    "WRONG_CREDENTIALS": "This username and password combination is not valid!",
     "QUESTIONAIRE": {
         "BASE": {
             "2": {
